update filter and add org

--- a/_data/algoritmeregisters.yaml
+++ b/_data/algoritmeregisters.yaml
@@ -47,3 +47,10 @@
   tool: spreadsheet
   url: 
   status: in ontwikkeling
+- title: Algoritmeregister RvIG
+  organisation: Rijksdienst voor Identiteitsgegevens
+  description: 
+  type:
+  tool:
+  url: 
+  status: in ontwikkeling
