--- a/_data/algoritmeregisters.yaml
+++ b/_data/algoritmeregisters.yaml
@@ -54,3 +54,10 @@
   tool:
   url: 
   status: in ontwikkeling
+- title: Algoritmeregister Noord-Holland
+  organisation: Provincie Noord-Holland
+  description: 
+  type:
+  tool:
+  url: 
+  status: in ontwikkeling
