--- a/_data/algoritmeregisters.yaml
+++ b/_data/algoritmeregisters.yaml
@@ -61,3 +61,10 @@
   tool:
   url: 
   status: in ontwikkeling
+- title: Algoritmeregister JenV
+  organisation: Ministerie van Justitie en Veiligheid
+  description: 
+  type:
+  tool:
+  url: 
+  status: in ontwikkeling
