add load registers from data file

--- a/_data/algoritmeregisters.yaml
+++ b/_data/algoritmeregisters.yaml
@@ -4,6 +4,8 @@
   type: databestand
   tool: spreadsheet
   url: https://data.overheid.nl/en/dataset/algoritme-register
+  json: /testdata/den-haag.json
+  standard: DenHaag
   status: in gebruik
 - title: Algoritmeregister Rotterdam
   organisation: Gemeente Rotterdam
@@ -11,6 +13,8 @@
   type: website
   tool: algemene cms
   url: https://www.rotterdam.nl/algoritmeregister
+  json: /testdata/rotterdam.json
+  standard: Algoritmeregister-v0.3
   status: in gebruik
 - title: Algoritmeregister Rotterdam
   organisation: Gemeente Rotterdam
@@ -25,6 +29,8 @@
   type: website
   tool: saidot.ai
   url: https://algoritmeregister.amsterdam.nl
+  json: /testdata/amsterdam.json
+  standard: Algoritmeregister-v0.3
   status: in gebruik
 - title: Algoritmeregister Utrecht
   organisation: Gemeente Utrecht
@@ -32,6 +38,8 @@
   type: databestand
   tool: spreadsheet
   url: https://data.overheid.nl/en/dataset/utrecht-algoritmeregister-utrecht
+  json: /testdata/utrecht.json
+  standard: Utrecht
   status: in gebruik
 - title: Algoritmeregister Noord-Brabant
   organisation: Provincie Noord-Brabant
